@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Disruptor Artillery S1">
  <general>
+  <shortname>Disruptor A. S1</shortname>
   <slot>weapon</slot>
   <size>medium</size>
   <license>Heavy Weapon</license>
