@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Disruptor Battery S2">
  <general>
+  <shortname>Disruptor B. S2</shortname>
   <slot>weapon</slot>
   <size>large</size>
   <license>Heavy Weapon</license>
