@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Plasma Blaster MK1">
  <general>
+  <shortname>Plasma Bl. MK1</shortname>
   <slot>weapon</slot>
   <size>small</size>
   <mass>3</mass>
