@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Plasma Blaster MK2">
  <general>
+  <shortname>Plasma Bl. MK2</shortname>
   <slot>weapon</slot>
   <size>small</size>
   <license>Medium Weapon</license>
