@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Plasma Cluster Cannon">
  <general>
+  <shortname>Plasma C. Cannon</shortname>
   <slot>weapon</slot>
   <size>medium</size>
   <license>Medium Weapon</license>
