@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Plasma Turret MK1">
  <general>
+  <shortname>Plasma T. MK1</shortname>
   <slot>weapon</slot>
   <size>small</size>
   <license>Medium Weapon</license>
