@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Plasma Turret MK2">
  <general>
+  <shortname>Plasma T. MK2</shortname>
   <slot>weapon</slot>
   <size>medium</size>
   <license>Medium Weapon</license>
