@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Razor Artillery S1">
  <general>
+  <shortname>Razor A. S1</shortname>
   <slot>weapon</slot>
   <size>small</size>
   <mass>2</mass>
