@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Razor Artillery S3">
  <general>
+  <shortname>Razor A. S3</shortname>
   <slot>weapon</slot>
   <size>small</size>
   <license>Medium Weapon</license>
