@@ -20,6 +20,7 @@
    * Have ships be a little less spammy distressing
    * Centered tracking icon in slim GUI
    * Show tracking icons for non-turret bolt weapons too
+   * More short names for weapon outfits
    * `test_of_renewal`: fixed weapon set defaults being incorrect and increased enemy damage
    * `seek_n_destroy`: missions should work properly when boarding the target
    * `flf_diversion`, `flf_rogue`: Missions should no longer be able to have ridiculously low credit rewards
